--- a/Solution/App/App.xaml
+++ b/Solution/App/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application
+﻿<caliburn:CaliburnApplication
     x:Class="App.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:App"
+    xmlns:caliburn="using:Caliburn.Micro"
     RequestedTheme="Light">
 
-</Application>
+</caliburn:CaliburnApplication>
