--- a/Solution/App/App.xaml
+++ b/Solution/App/App.xaml
@@ -3,6 +3,4 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:caliburn="using:Caliburn.Micro"
-    RequestedTheme="Light">
-
-</caliburn:CaliburnApplication>
+    RequestedTheme="Light" />
