--- a/Solution/App/Views/ShellView.xaml
+++ b/Solution/App/Views/ShellView.xaml
@@ -3,33 +3,47 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:controls="using:WinRTXamlToolkit.Controls"
-      xmlns:interactivity="using:WinRTXamlToolkit.Interactivity"
-      xmlns:behaviors="using:App.Behaviors"
-      mc:Ignorable="d" d:DataContext="{d:IShellViewModel}">
+      mc:Ignorable="d">
 
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Text="{Binding PathSelected}" />
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
 
-        <SplitView Grid.Row="1"
-                   Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-                   PanePlacement="Left"
-                   IsPaneOpen="True"
-                   OpenPaneLength="200"
-                   DisplayMode="CompactInline">
-            <SplitView.Pane>
-                <controls:TreeView>
-                    <interactivity:Interaction.Behaviors>
-                        <behaviors:TreeViewBehavior />
-                    </interactivity:Interaction.Behaviors>
-                </controls:TreeView>
-            </SplitView.Pane>
-            <SplitView.Content />
-        </SplitView>
+            <TextBlock Grid.Row="0" Text="{Binding PathSelected}" />
+
+            <Button Grid.Column="1" Content="Browse ..." x:Name="BrowseAsync" />
+        </Grid>
+
+        <ListView Grid.Row="1" ItemsSource="{Binding Files}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <StackPanel Orientation="Vertical" Grid.Column="0">
+                <TextBox />
+                <TextBox />
+            </StackPanel>
+
+            <Button Grid.Column="1" Content="Apply" x:Name="ApplyAsync" />
+        </Grid>
     </Grid>
+
 </Page>
