--- a/Solution/App/Views/ShellView.xaml
+++ b/Solution/App/Views/ShellView.xaml
@@ -3,6 +3,8 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+      xmlns:micro="using:Caliburn.Micro"
       mc:Ignorable="d">
 
     <Grid>
@@ -38,8 +40,8 @@
             </Grid.ColumnDefinitions>
 
             <StackPanel Orientation="Vertical" Grid.Column="0">
-                <TextBox />
-                <TextBox />
+                <TextBox x:Name="Pattern" />
+                <TextBox x:Name="ReplacePattern" />
             </StackPanel>
 
             <Button Grid.Column="1" Content="Apply" x:Name="ApplyAsync" />
