--- a/Solution/App/App.xaml
+++ b/Solution/App/App.xaml
@@ -3,4 +3,4 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:caliburn="using:Caliburn.Micro"
-    RequestedTheme="Light" />
+    RequestedTheme="Dark" />
