--- a/Solution/App/Views/ShellView.xaml
+++ b/Solution/App/Views/ShellView.xaml
@@ -4,37 +4,43 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:behaviors="using:App.Behaviors"
+      xmlns:controls="using:WinRTXamlToolkit.Controls"
       mc:Ignorable="d">
 
-    <Grid>
+    <Grid Background="{ThemeResource SystemControlBackgroundChromeMediumBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0">
+        <Grid Grid.Row="0" Margin="10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
-            <TextBlock Grid.Row="0" Text="{Binding FolderSelected.Path}" />
+            <TextBlock Grid.Row="0" Text="{Binding FolderSelected.Path}"
+                       VerticalAlignment="Center"/>
 
             <Button Grid.Column="1" Content="Browse ..." x:Name="BrowseAsync" />
         </Grid>
 
-        <ListView Grid.Row="1" ItemsSource="{Binding Files}">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <RichTextBlock behaviors:RegexColorBehavior.FileName="{Binding Name}"
-                                       behaviors:RegexColorBehavior.Result="{Binding RegexResult.Result}"
-                                       behaviors:RegexColorBehavior.FuturResult="{Binding RegexResult.FuturResult}" />
-                    </StackPanel>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+        <Border Grid.Row="1" BorderThickness="0 1 0 1" BorderBrush="{ThemeResource TextBoxBorderThemeBrush}">
+            <ListView ItemsSource="{Binding Files}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <RichTextBlock behaviors:RegexColorBehavior.FileName="{Binding Name}"
+                                           behaviors:RegexColorBehavior.Result="{Binding RegexResult.Result}"
+                                           behaviors:RegexColorBehavior.FuturResult="{Binding RegexResult.FuturResult}" />
+                        </StackPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Border>
 
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
@@ -42,13 +48,16 @@
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
-            <StackPanel Orientation="Vertical" Grid.Column="0">
-                <TextBox Text="{Binding Pattern.Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            <StackPanel Orientation="Vertical" Grid.Column="0" Margin="10">
+                <TextBox Text="{Binding Pattern.Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                         Margin="0 0 0 10" />
                 <TextBox Text="{Binding ReplacePattern.Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             </StackPanel>
 
-            <Button Grid.Column="1" Content="Apply" x:Name="ApplyAsync" />
+            <Button Grid.Column="1" Content="Apply" x:Name="ApplyAsync" Margin="0 0 10 0" />
         </Grid>
+
+        <controls:CustomAppBar Grid.Row="3" />
     </Grid>
 
 </Page>
