--- a/Solution/App/Views/ShellView.xaml
+++ b/Solution/App/Views/ShellView.xaml
@@ -1,11 +1,11 @@
-﻿<Page x:Class="App.Views.ShellView"
+﻿<Page x:Class="BulkRenaming.Views.ShellView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:controls="using:WinRTXamlToolkit.Controls"
-      xmlns:converters="using:App.Converters"
       xmlns:micro="using:Caliburn.Micro"
+      xmlns:converters="using:BulkRenaming.Converters"
       mc:Ignorable="d">
 
     <Page.Resources>
