--- a/Solution/App/Views/ShellView.xaml
+++ b/Solution/App/Views/ShellView.xaml
@@ -87,10 +87,10 @@
                 </Grid.ColumnDefinitions>
 
                 <StackPanel Orientation="Vertical" Grid.Column="0" Margin="10">
-                    <controls:WatermarkTextBox WatermarkText="Pattern"
+                    <controls:WatermarkTextBox WatermarkText="Regex"
                                                Text="{Binding Pattern.Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                                Margin="0 0 0 10" />
-                    <controls:WatermarkTextBox WatermarkText="Replace pattern"
+                    <controls:WatermarkTextBox WatermarkText="Replacement pattern"
                                                Text="{Binding ReplacePattern.Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                 </StackPanel>
 
